Bump tycho version to 0.24.0, build against Neon
Signed-off-by: Fred Bricon <fbricon@gmail.com>